--- a/home.html
+++ b/home.html
@@ -4,13 +4,63 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>TEN</title>
 		<link rel="stylesheet" type="text/css" href="styles_tech.css"/>
-		<!-- <script type="text/javascript" src="slideshow_technight.js"> -->
-		</script>
+		<!-- <script type="text/javascript" src="slideshow_technight.js">
+		</script>  -->
 	</head>
 
 	<body> 
-		<div class="header">
-			<img src="TENlogo.png" alt="TEN Logo" height="20%" width="20%" />
+		<div id="header">
+			<img src="Images/TENlogo.png" alt="TEN Logo" id="header_image"/>
+			
+			<div id="navigation">
+				<ul>
+					<li><a href="#main_content">Home</a></li>
+				</ul>
+			</div>
+		</div>
+		
+		<div id="main_content">
+			<h2 class="content_heading">What is TEN?</h2>
+			<p>
+				TEN is an opportunity for elementary to high school students to have fun with technology. Students can also learn about the possibilities of technology and engineering based careers.
+			</p>
+			<p>
+				The event also seeks to inform parents about how these fields can be beneficial to their child for more than just a career.
+			</p>
+			<p>
+				Learning about technology can foster possible life skills that will help them in any field they choose.
+			</p>
+			<p>
+				The evening will also showcase projects by LPS students from Project Lead The Way(PLTW) and Technology Student Association (TSA)
+			</p>
+			
+			<h2 class="content_heading">When is TEN?</h2>
+			<p style="text-align: center">
+				Tuesday, May 2nd<br />
+				6:00pm-8:00pm<br />
+				Liberty North High School<br />
+				1000 NE 104 Street, Liberty, MO 64068
+			</p>
+		</div>
+		
+		<div id="organizations">
+			<h2 class="content_heading">Organizations Attending</h2>
+			
+		</div>
+		
+		<div id="tsa">
+			<h2 class="content_heading">What is TSA?</h2>
+			
+		</div>
+		
+		<div id="pltw">
+			<h2 class="content_heading">What is PLTW?</h2>
+			
+		</div>
+		
+		<div id="register">
+			<h2 class="content_heading">Registration</h2>
+			
 		</div>
 	</body>
 </html>
