--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>TEN</title>
-		<link rel="stylesheet" type="text/css" href="styles_tech.css"/>
+		<link rel="stylesheet" type="text/css" href="styles.css"/>
 		<!-- <script type="text/javascript" src="slideshow_technight.js">
 		</script>  -->
 	</head>
@@ -15,6 +15,10 @@
 			<div id="navigation">
 				<ul>
 					<li><a href="#main_content">Home</a></li>
+					<li><a href="#main_content">Organizations</a></li>
+					<li><a href="#main_content">TSA</a></li>
+					<li><a href="#main_content">PLTW</a></li>
+					<li><a href="#main_content">Register</a></li>
 				</ul>
 			</div>
 		</div>
@@ -46,11 +50,15 @@
 		<div id="organizations">
 			<h2 class="content_heading">Organizations Attending</h2>
 			
+			
 		</div>
 		
 		<div id="tsa">
 			<h2 class="content_heading">What is TSA?</h2>
 			
+			<p>
+				TSA (Technology Student Organization)chapters take the study of STEM (science, technology, engineering, mathematics) beyond the classroom and give students the chance to pursue academic challenges among friend with similar goals and interests. Together, chapter members work on competitive events, attend conferences on the state and national levels and have a good time raising funds to get there. Chapter organization develops leadership, as members may become officers within their state and then run nationally. Our chapters are committed to a national service project and are among the most service-orientated groups in the community.
+			</p>
 		</div>
 		
 		<div id="pltw">
