--- a/home.html
+++ b/home.html
@@ -4,13 +4,12 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>TEN</title>
 		<link rel="stylesheet" type="text/css" href="styles.css"/>
-		<!-- <script type="text/javascript" src="slideshow_technight.js">
-		</script>  -->
+		<script type="text/javascript" src="Scripts/imageHover.js"></script>
 	</head>
 
 	<body> 
 		<div id="header">
-			<img src="Images/TENlogo.png" alt="TEN Logo" id="header_image"/>
+			<a href="home.html"><img src="Images/TENlogo.png" alt="TEN Logo" id="header_image" onmouseover="hover(this)" onmouseout="unhover(this)" /></a>
 			
 			<div id="navigation">
 				<ul>
